# ai-code-reviewer

./: .gitignore  README.md  pyproject.toml
examples/: sample_buggy.py
src/ai_code_reviewer/: __init__.py  cli.py  formatter.py  reviewer.py
tests/: test_reviewer.py
